--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-Copy code
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>あなたの名前 - ホーム</title>
