--- a/qc_learning.html
+++ b/qc_learning.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning Quantum Computation</title>
+    <title>あなたの名前 - プロフィール</title>
 </head>
 <body>
     <header>
@@ -18,8 +18,19 @@
     </header>
     
     <section>
-        <h2>ようこそ！</h2>
-        <p>htmlの勉強のために作ったサイトです。</p>
+        <h2>Basis</h2>
+        <ul>
+            <li><a href="basic/basic1/">Basic1</a></li>
+            <li><a href="basic/basic2/">Basic2</a></li>
+            <!-- 新しい記事が追加されるたびに、このリストに追加していく -->
+        </ul>
+    </section>
+
+    <section>
+        <h2>Basis2</h2>
+        <ul>
+            <!-- <li><a href="articles/article1/">記事タイトル1</a></li> -->
+        </ul>
     </section>
 
     <footer>
