--- a/qc_learning.html
+++ b/qc_learning.html
@@ -20,8 +20,8 @@
     <section>
         <h2>Basis</h2>
         <ul>
-            <li><a href="basic/basic1.html">Basic1</a></li>
-            <li><a href="basic/basic2.html">Basic2</a></li>
+            <li><a href="articles/basic/basic1.html">Basic1</a></li>
+            <li><a href="articles/basic/basic2.html">Basic2</a></li>
             <!-- 新しい記事が追加されるたびに、このリストに追加していく -->
         </ul>
     </section>
